--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>快乐数学 - 同步人教版</title>
     
+    <!-- 性能优化：预加载核心模块 -->
+    <link rel="modulepreload" href="https://esm.sh/react@19.0.0" />
+    <link rel="modulepreload" href="https://esm.sh/react-dom@19.0.0" />
+    <link rel="modulepreload" href="https://esm.sh/react-dom@19.0.0/client" />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       window.process = { env: { NODE_ENV: 'production' } };
@@ -23,12 +28,14 @@
             fontFamily: { sans: ['"Comic Sans MS"', '"Chalkboard SE"', '"Microsoft YaHei"', 'sans-serif'] },
             keyframes: {
               wiggle: { '0%, 100%': { transform: 'rotate(-2deg)' }, '50%': { transform: 'rotate(2deg)' } },
-              pop: { '0%': { transform: 'scale(0.9)', opacity: '0' }, '100%': { transform: 'scale(1)', opacity: '1' } }
+              pop: { '0%': { transform: 'scale(0.9)', opacity: '0' }, '100%': { transform: 'scale(1)', opacity: '1' } },
+              float: { '0%, 100%': { transform: 'translateY(0)' }, '50%': { transform: 'translateY(-10px)' } }
             },
             animation: {
               wiggle: 'wiggle 0.3s ease-in-out infinite',
               pop: 'pop 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards',
-              'bounce-slow': 'bounce 3s infinite'
+              'bounce-slow': 'bounce 3s infinite',
+              'float': 'float 2s ease-in-out infinite'
             }
           }
         }
@@ -101,14 +108,26 @@
         overflow: auto;
       }
 
-      /* 初始加载动画 */
-      .loader {
+      .loader-container {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         height: 100%;
-        color: #4D96FF;
+        background: radial-gradient(circle, #f0f9ff 0%, #dbeafe 100%);
+      }
+
+      .pencil-loader {
+        font-size: 64px;
+        animation: writing 1.5s infinite ease-in-out;
+      }
+
+      @keyframes writing {
+        0% { transform: translate(0, 0) rotate(0deg); }
+        25% { transform: translate(20px, -20px) rotate(10deg); }
+        50% { transform: translate(40px, 0) rotate(0deg); }
+        75% { transform: translate(20px, 20px) rotate(-10deg); }
+        100% { transform: translate(0, 0) rotate(0deg); }
       }
     </style>
   <link rel="stylesheet" href="/index.css">
@@ -116,9 +135,10 @@
   <body>
     <div id="error-overlay"></div>
     <div id="root">
-      <div class="loader">
-        <div class="mb-4 text-4xl animate-bounce">✏️</div>
-        <div class="text-xl font-bold">数学魔法加载中...</div>
+      <div class="loader-container">
+        <div class="pencil-loader mb-6">✏️</div>
+        <div class="text-2xl font-black text-brand-blue animate-pulse">数学魔法布置中...</div>
+        <div class="mt-4 text-sm text-blue-400 font-bold">同步人教版 1-6 年级课程</div>
       </div>
     </div>
 
@@ -131,6 +151,7 @@
             <div style="max-width: 500px; margin: 2rem auto; text-align: center;">
               <h1 style="font-size: 5rem; margin-bottom: 1rem;">😵</h1>
               <h2 style="color: #1f2937; font-weight: 800; font-size: 1.5rem;">魔法课堂加载失败</h2>
+              <p style="color: #6b7280; margin-bottom: 2rem;">可能是网络魔法开小差了</p>
               <div style="text-align: left; background: #fef2f2; padding: 1rem; border-radius: 1rem; font-size: 0.75rem; color: #b91c1c; border: 1px solid #fecaca; margin: 1.5rem 0; white-space: pre-wrap; word-break: break-all;">
                 <strong>详情：</strong>${msg}<br>
                 <strong>位置：</strong>${line}行
