--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>快乐数学 - 同步人教版</title>
     
-    <!-- 预加载核心依赖，提升网络加载优先级 -->
+    <!-- 1. 极速预加载：在解析 JS 前并行下载核心库 -->
     <link rel="modulepreload" href="https://esm.sh/react@19.0.0?bundle" />
     <link rel="modulepreload" href="https://esm.sh/react-dom@19.0.0?bundle" />
+    <link rel="modulepreload" href="https://esm.sh/react-dom@19.0.0/client?bundle" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -37,14 +38,15 @@
       }
     </script>
 
+    <!-- 2. 修复 Import Map：确保模块名准确映射，解决 "Failed to resolve module specifier" -->
     <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@19.0.0?bundle",
     "react-dom": "https://esm.sh/react-dom@19.0.0?bundle",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client?bundle",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
@@ -72,7 +74,7 @@
       .pb-safe { padding-bottom: max(0.75rem, var(--sab)); }
       .no-scrollbar::-webkit-scrollbar { display: none; }
       
-      /* 骨架屏加载动画 */
+      /* 加载骨架屏 */
       .loader-container { display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%; background: #f0f9ff; }
       .pencil-loader { font-size: 64px; animation: writing 1s infinite alternate ease-in-out; }
       @keyframes writing { from { transform: translate(-10px, 0) rotate(-5deg); } to { transform: translate(10px, -5px) rotate(15deg); } }
@@ -83,9 +85,10 @@
     <div id="root">
       <div class="loader-container">
         <div class="pencil-loader mb-4">✏️</div>
-        <div class="text-xl font-black text-brand-blue animate-pulse tracking-widest">数学魔法布置中...</div>
+        <div class="text-xl font-black text-brand-blue animate-pulse tracking-widest text-center">数学魔法召唤中...</div>
       </div>
     </div>
+    <!-- 3. 入口脚本：必须使用 data-type="module" 配合 importmap 使用 -->
     <script type="text/babel" data-type="module" data-presets="tsx" src="index.tsx"></script>
   <script type="module" src="/index.tsx"></script>
 </body>
