--- a/index.html
+++ b/index.html
@@ -35,26 +35,16 @@
     <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.0.0?bundle",
-    "react-dom": "https://esm.sh/react-dom@19.0.0?bundle&external=react",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client?bundle&external=react",
-    "react/jsx-runtime": "https://esm.sh/react@19.0.0/jsx-runtime?bundle",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "react/jsx-runtime": "https://esm.sh/react@19.0.0/jsx-runtime",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
     
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script>
-      Babel.registerPreset("tsx", {
-        presets: [
-          [Babel.availablePresets["typescript"], { allExtensions: true, isTSX: true }],
-          [Babel.availablePresets["react"], { runtime: "automatic" }]
-        ]
-      });
-    </script>
-
     <style>
       :root { --sat: env(safe-area-inset-top); --sab: env(safe-area-inset-bottom); }
       html, body { 
