--- a/index.html
+++ b/index.html
@@ -32,18 +32,7 @@
       }
     </script>
 
-    <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@19.0.0",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "react/jsx-runtime": "https://esm.sh/react@19.0.0/jsx-runtime",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
-  }
-}
-</script>
+
     
     <style>
       :root { --sat: env(safe-area-inset-top); --sab: env(safe-area-inset-bottom); }
@@ -56,11 +45,11 @@
       #root { height: 100%; width: 100%; display: flex; flex-direction: column; }
       
       .loader-container { 
-        position: fixed; inset: 0; z-index: 999;
+        position: fixed; inset: 0; z-index: 9999;
         display: flex; flex-direction: column; align-items: center; justify-content: center; 
-        background: #f0f9ff; transition: opacity 0.5s;
+        background: #f0f9ff; transition: opacity 0.5s ease-out, visibility 0.5s;
       }
-      .loader-container.hidden { opacity: 0; pointer-events: none; }
+      .loader-container.hidden { opacity: 0; visibility: hidden; pointer-events: none; }
       .pencil-loader { font-size: 64px; animation: writing 1s infinite alternate ease-in-out; }
       @keyframes writing { from { transform: translate(-10px, 0) rotate(-5deg); } to { transform: translate(10px, -5px) rotate(15deg); } }
     </style>
@@ -69,7 +58,7 @@
   <body>
     <div id="app-loader" class="loader-container">
       <div class="pencil-loader mb-4">✏️</div>
-      <div class="text-xl font-black text-brand-blue animate-pulse tracking-widest text-center">数学魔法召唤中...</div>
+      <div class="text-xl font-black text-brand-blue animate-pulse tracking-widest text-center px-6">数学魔法召唤中...</div>
     </div>
     <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
