--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>快乐数学 - 同步人教版</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- 添加React和React DOM的CDN引用 -->
+    <script crossorigin src="https://unpkg.com/react@19/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@19/umd/react-dom.development.js"></script>
     <script>
       window.process = { env: { NODE_ENV: 'production' } };
       tailwind.config = {
@@ -61,6 +64,6 @@
       <div class="text-xl font-black text-brand-blue animate-pulse tracking-widest text-center px-6">数学魔法召唤中...</div>
     </div>
     <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
+  <script src="/index.js"></script>
 </body>
 </html>
