--- a/index.html
+++ b/index.html
@@ -288,6 +288,6 @@
   </script>
   
   <!-- React应用入口 -->
-  <script type="module" src="/index.tsx"></script>
+  <script type="module" src="./index.tsx"></script>
 </body>
 </html>
