--- a/index.html
+++ b/index.html
@@ -269,7 +269,9 @@
     }
   </script>
   
-  <!-- React应用入口 -->
-  <script type="module" src="./index.tsx"></script>
+  <!-- React应用入口 - 使用纯JavaScript文件避免MIME类型错误 -->
+  <script src="https://unpkg.com/react@19/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@19/umd/react-dom.development.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
