--- a/index.html
+++ b/index.html
@@ -227,6 +227,9 @@
     </div>
   </div>
   
+  <!-- React应用入口 -->
+  <script type="module" src="./index.tsx"></script>
+  
   <!-- 确保脚本能够被正确执行 -->
   <script>
     console.log('开始执行脚本...');
