--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
     </div>
   </div>
   
-  <!-- React应用入口 -->
-  <script type="module" src="./index.tsx"></script>
+  <!-- React入口脚本 -->
+  <script type="module" src="/index.tsx"></script>
   
   <!-- 确保脚本能够被正确执行 -->
   <script>
