--- a/index.html
+++ b/index.html
@@ -228,9 +228,8 @@
   </div>
   
   <!-- React入口脚本 -->
-  <script type="module" src="/index.tsx"></script>
+  <script type="module" src="/src/main.tsx"></script>
   
-  <!-- 确保脚本能够被正确执行 -->
   <script>
     console.log('开始执行脚本...');
     
