--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     </div>
   </div>
   
-  <!-- React入口脚本 -->
+  <!-- Vite入口脚本 -->
   <script type="module" src="/src/main.tsx"></script>
   
   <script>
